--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,19 +24,33 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HealtyApplication.NoActionBar">
-        <activity
-            android:name=".ui.home.HomeActivity"
-            android:label="@string/title_activity_home" />
-        <activity android:name=".ui.login.SignActivity" />
-        <activity android:name=".ui.login.RegistrationActivity" />
-        <activity android:name=".ui.setting.SettingActivity" />
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.HealtyApplication">
+        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ui.home.HomeActivity"
+            android:label="@string/title_activity_home"
+            android:theme="@style/Theme.HealtyApplication.NoActionBar"/>
+
+        <activity android:name=".ui.login.SignActivity"
+            android:parentActivityName=".MainActivity">
+        <meta-data
+            android:name="android.support.PARENT_ACTIVITY"
+            android:value=".MainActivity" />
+        </activity>
+
+
+        <activity android:name=".ui.login.RegistrationActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
     </application>
 
